--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -1,16 +1,16 @@
 .home--container{
     background-color: var(--blau);
     color: white;
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    padding: 0 50px;
+    padding: 0 50px 100px;
     
 }
 
 .home--container--top{
     position: relative;
     display: flex;
-    padding: 50px 0;
+    padding: 50px;
     justify-content: space-evenly;
     gap: 10px;
     align-items: center;
@@ -19,24 +19,47 @@
 
 .home--container--top > img{   
     border-radius: 2px;
-    max-width: 35em;
+    max-width: 32em;
     width: 100%;
     height: auto;
     object-fit: cover;
-    border: 5px ridge var(--rot)
+    border: 2px solid var(--rot);
+    box-shadow: 0px 0px 20px 0px rgba(11, 4, 104, 0.9);
+    -webkit-box-shadow:0px 0px 20px 0px rgba(11, 4, 104, 0.9);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(11, 4, 104, 0.9);
+    -webkit-transition-property: all; 
+            transition-property: all;
+    -webkit-transition-duration: 0.3s; 
+            transition-duration: 0.3s; 
+    -webkit-transition-timing-function: ease; 
+            transition-timing-function: ease; 
 }
-.home--container--top > p {
-    position: absolute;
+    
+.home--container--top > img:hover{
+    transform: scale(1.03); 
+}
+
+.home--container--top--left {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.home--container--top--left > p {
+    grid-area: 1 / 2 / 2 / 3;
     font-size: 2em;
     letter-spacing: .3em;
     font-weight: 600;
-    top: 50px;
-    left: 50px;
     line-height: 1.5em;
+    align-self:last baseline;
+    justify-self: end;
+    
 }
 
-.home--container--top > h1{
-   
+.home--container--top--left > h1{
+    grid-area: 2 / 1 / 3 / 3; 
     line-height: 2em;
     font-weight: 600;
     text-align: left;
@@ -70,6 +93,55 @@
      
 }
 
+.home-link{
+    grid-area: 3 / 2 / 4 / 3;
+    align-self: first baseline;
+    justify-self: end; 
+    color: white;
+    background-color: rgba(255, 0, 0, 0.753);
+    height: 50px;
+    width: 150px;
+    border-radius: 30px;
+    font-size: 1.3em;
+    padding: 13px;
+    margin-top: 10px;
+    
+     
+    
+}
+.home-link:hover{
+    box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
+    -webkit-box-shadow:0px 0px 20px 0px rgba(235,245,242,0.9);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
+}
+
+.home--container--bottom{
+    margin: 0 auto;
+    width: 90%;
+    display: flex;
+    gap:5px;
+    justify-content: center;
+    text-align: left;
+    border-top: 3px solid white;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.089);
+    
+    
+}
+
+
+.home--container--bottom--box{
+    display: flex;
+    align-self: center;
+    padding: 10px 30px 30px
+}
+
+.home--container--bottom--box >img {
+    width: 80px;
+    height: 80px;
+    margin: 20px;
+}
+
 @keyframes fade-in {
     0% {
       opacity: 0;
@@ -79,4 +151,6 @@
     }
   }
 
-  
+@media screen and (max-width: 768px) {
+    
+}
