--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -27,16 +27,13 @@
     box-shadow: 0px 0px 20px 0px rgba(11, 4, 104, 0.9);
     -webkit-box-shadow:0px 0px 20px 0px rgba(11, 4, 104, 0.9);
     -moz-box-shadow: 0px 0px 20px 0px rgba(11, 4, 104, 0.9);
-    -webkit-transition-property: all; 
-            transition-property: all;
-    -webkit-transition-duration: 0.3s; 
-            transition-duration: 0.3s; 
-    -webkit-transition-timing-function: ease; 
-            transition-timing-function: ease; 
+     transition: 1s ease;
 }
-    
 .home--container--top > img:hover{
-    transform: scale(1.03); 
+-webkit-transform: rotateZ(7deg);
+-ms-transform: rotateZ(7deg);
+transform: rotateZ(7deg);
+transition: 1s ease; 
 }
 
 .home--container--top--left {
