--- a/src/styles/fahrschule.css
+++ b/src/styles/fahrschule.css
@@ -4,6 +4,7 @@
     height: 100%;
     width: 100%;
     padding: 0 50px 100px;
+    margin-bottom: 100px;
     
 }
 
@@ -60,7 +61,7 @@ transition: 1s ease;
     line-height: 2em;
     font-weight: 600;
     text-align: left;
-    animation: 2s fade-in ease-in-out 1;
+    animation: 3s fade-in ease-in-out 1;
 }
 
 .willkommen--span {   
