--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,10 +1,42 @@
 footer {	
-	
-	bottom: 10px;
-	height: 20px;
+	padding-top: 100px;
+	margin-bottom: 80px;
+	bottom: 35px;
+	height: 100px;
 	width: 100%;
-	text-align: center;
-	font-size: .9em;
-	font-weight: 650;
 	position: absolute;	
+	
+	
+}
+
+.footer--container--top{
+	width: 50%;
+	margin:0 auto;
+	display: flex;
+	justify-content: center;
+	gap:20px;
+	align-items:last baseline;
+	border-bottom: 2px ridge white ;
+	font-size: 1rem;
+	font-weight: 600;
+	color:rgb(114, 114, 114)
+}
+
+
+footer >  a > h4 {
+	background: var(--blau);  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #eaafc8, var(--blau) 100%);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #eaafc8, var(--blau) 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	color: white;
+	width: 160px;
+	height: 25px;
+	padding-top: 4px;
+	margin: 20px auto;	
+	border-radius: 5px;
+}
+
+footer > a > h4:hover{
+	background: var(--blau);  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, var(--blau), #eaafc8 100%);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, var(--blau), #eaafc8 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */	
 }
