--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -30,3 +30,105 @@ header {
     border-right: 2px solid var(--rot);
     border-radius: 50%;
   }
+
+  .menuNav{
+    display: none;
+  }
+  .menu{
+    display: none;
+  }
+
+  @media screen and (max-width: 1600px) {
+    header {
+      height: 180px;
+      flex-direction: column;
+      gap:20px;
+      align-items: space-between;
+      margin: 0 0 30px;
+    }
+
+  }
+
+  @media screen and (max-width: 760px) {
+
+
+    .site-logo > img {
+        width: 100%;
+        max-width: 20rem;
+        margin-top: 20%;
+      }
+
+    header {
+      height: 180px;
+      flex-direction: column;
+      margin-bottom: 0;
+      padding-bottom: 0;
+     
+    }
+
+    nav > a{
+        display: none; 
+      }
+
+      .menu {
+        position: absolute;
+        width: 50px;
+        display: inline;
+        top: 30px;
+        right: 50px;
+        padding-bottom: 100px;
+      }
+    
+      
+      .menu:hover{
+        -webkit-transform: rotateY(-360deg);
+        -ms-transform: rotateY(-360deg);
+        transform: rotateY(-360deg);
+        transition: 3s ease; 
+      }
+      .menuNav {
+        background: rgba(255, 255, 255, 0.952);
+        height:100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        row-gap: 20px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 50vw;
+        z-index: 3;
+        border: none;
+        box-shadow: 1px 1px 5px black;
+        font-size: large;
+        font-weight: 600;
+        animation: expand-fade-in .7s ease-in;
+      }
+      .menuNav > a {
+        color: var(--textColor);
+        padding: 10px;
+        width: 100%;
+      }
+    
+      @keyframes expand-fade-in {
+        from {
+          opacity: 0%;
+        }
+        to {
+          opacity: 100%;
+        }
+      }
+    
+
+
+
+}
+
+@media screen and (max-width: 500px) {
+ 
+    .site-logo > img {
+        width: 100%;
+        max-width: 20rem;
+      }
+    }
+
