--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 *:after {
   box-sizing: border-box;
   --blau: #005EA8;
-  --rot: #FE0201;
+  --rot: #e00505;
   --textColor: #504c4a;
   --mainFont: "Roboto", sans-serif;
 }
