--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 *:after {
   box-sizing: border-box;
   --blau: #005EA8;
+  --blau2: #023861;
   --rot: #e40707;
   --textColor: #504c4a;
   --mainFont: "Roboto", sans-serif;
