--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -24,7 +24,7 @@
     align-items: center;
     justify-content: space-evenly;
     position: relative;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     
 }
 
@@ -84,7 +84,7 @@
     border-radius: 30px;
     font-size: 1.3em;
     padding-top: 15px;
-    margin-top: 15px;
+    margin: 40px 0 10px;
     font-size: large;
 
 }
@@ -93,6 +93,13 @@
     box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
     -webkit-box-shadow:0px 0px 20px 0px rgba(235,245,242,0.9);
     -moz-box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
+}
+
+.über--top--rows {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
 
 .über--top--row {
@@ -132,7 +139,7 @@
     flex-direction: column;
     text-align: left;
     align-items: center;
-    padding:30px; 
+    padding:20px; 
     height: 100%;
     width: 30vw;
     background-color: var(--rot);
@@ -142,10 +149,23 @@
 
 .über--mittle--right > h1{
     letter-spacing: .2em;
+    padding-left: 10px;
+}
+
+
+.filialen{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px 20px;
+    flex-direction: column;
+    
 }
 
 .filiale {
-    padding: 30px;
+    padding: 20px;
     display: flex;
     align-items: center;
     gap: 30px;
@@ -222,9 +242,16 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: space-between;
-    gap: 50px;
+    gap: 100px;
   
 
+}
+
+.über--bottom > h1 {
+    font-size: 2.2em;
+    letter-spacing: .2em;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 .über--bottom--lehrer--box {
@@ -238,8 +265,8 @@
 
 
 figure {
-    width: 500px;
-    height:500px;   
+    width: 24em;
+    height:24em;  
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
@@ -248,25 +275,25 @@ figure {
 
 
 .über--bottom--lehrer--box figure img {
-    width: 500px;
-    height:500px; 
+    width: 24em;
+    height:24em; 
     object-fit: cover;
-    filter: brightness(70%);
+    filter: brightness(60%);
     transition: .3s ease-in-out;
    
 }
 
 .über--bottom--lehrer--box figure:hover img{
     filter: brightness(100%);
-    width: 550px;
+    width: 27em;
 }
 
 .profil-top-left {
   position: absolute;
-  top: 8px;
+  top: 0;
   left: 25px;
   color: white;
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-align: left;
 }
 
@@ -282,3 +309,76 @@ figure {
     height: 60px;
     margin-right: 10px;
 }
+
+.email:hover {
+    transform: scale(1.1);
+    transition: .3s ease-in-out;
+}
+
+@media screen and (max-width: 1600px) {
+    .über--top { 
+       height: fit-content;
+       flex-direction: column;
+       margin-bottom: 0;   
+        
+    }
+
+  
+    .über--mittle{
+        margin: 0;
+
+    }
+
+    .über--mittle--right {
+        width: 100%; 
+        flex-wrap: wrap;
+        gap: 30px;
+        
+    
+    }
+     .filialen {
+       flex-direction: row;
+       justify-content: center;
+       align-items: center;
+       gap: 50px;
+     }
+
+
+
+    .über--mittle--left{
+        display: none;
+    }
+    
+    .über--bottom--lehrer {
+        
+        grid-template-columns: 1fr 1fr;
+      
+    
+    }
+
+}
+
+@media screen and (max-width: 1000px) {
+   
+    .über--bottom--lehrer {   
+        grid-template-columns: 1fr; 
+    }
+
+}
+
+
+@media screen and (max-width: 800px) {
+    .filialen {
+        flex-direction: column;
+        gap: 0;
+      }
+      .über--top--row > h2{
+        font-size: 1.2em;
+        letter-spacing: .2em;   
+    }
+     
+};
+   
+
+
+
