--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -29,7 +29,7 @@
 }
 
 .über--top--img {
-    max-width: 42em;
+    max-width: 43em;
     width: 100%;
     height: auto;
     border: 10px solid var(--blau2);
@@ -182,7 +182,7 @@
         -webkit-transform: rotateY(-180deg);
         -ms-transform: rotateY(-180deg);
         transform: rotateY(-180deg);
-        transition: 3s ease;    
+        transition: 2s ease;    
 }
 
 .über--mittle--left {
@@ -194,7 +194,11 @@
     width: 100%;
     height: auto;
     border: 7px solid var(--blau2);
-    
+    transition: .7s ease; 
+
+}
+.schuleIMGs:hover{
+    filter: opacity(85%);
 }
 
 #schuleIMG1 {
