--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -19,7 +19,7 @@
     height: 600px;
     width: 100vw;
     padding: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -129,7 +129,7 @@
     width: 100vw;
     height: 100%;
     flex-wrap: wrap;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     position: relative;
 
 }
@@ -268,7 +268,7 @@
 }
 
 
-figure {
+.über--bottom--lehrer--box figure {
     width: 24em;
     height:24em;  
 	margin: 0;
