--- a/src/styles/leistungen.css
+++ b/src/styles/leistungen.css
@@ -44,37 +44,66 @@
   }
 
   .klasse--grid {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: var(--blau);
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     color: white;
-    box-shadow: 2px 2px 10px black;
     margin-bottom: 150px;
-    height:max-content;
-  }
-
-
-  .klasse--inhalt{
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-   
+    padding: 0;
+
   }
+
+
 
   .leistungen--card{
     display: flex;
     flex-wrap: wrap;
     text-align: left;
     align-items: center;
-    justify-content: center;
-    padding: 50px 20px;
+    justify-content:center;
+    padding: 20px 25px 20px 10px;
+    height: 200px;
+    width: auto;
+    box-shadow: 2px 2px 5px black;
+    
     
    
   }
+
+  .leistungen--card:nth-child(1){
+    grid-area: 1 / 1 / 2 / 3;
+    background-color: var(--rot);
+}
+
+.leistungen--card:nth-child(2){
+    grid-area: 1 / 3 / 2 / 5; 
+    background-color: white;
+    color:black
+}
+
+.leistungen--card:nth-child(3){
+    grid-area: 1 / 5 / 2 / 7;
+    background-color: var(--blau);
+}
+
+
+.leistungen--card:nth-child(4){
+    grid-area: 2 / 1 / 3 / 4; 
+    background-color: white;
+    color:black
+}
+
+.leistungen--card:nth-child(5){
+    grid-area: 2 / 4 / 3 / 7; 
+    background-color: var(--rot);
+}
 
   .leistungen--card img{
     width: 100px;
     height: auto;
   }
+
