--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -154,21 +154,23 @@
 
 
 .filialen{
+    
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
-    padding: 0 20px 20px;
+    padding-left: 50px;
     flex-direction: column;
+   
     
 }
 
-.filiale {
+.filiale {  
     padding: 20px;
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
     width: 80%;
     
 }
@@ -371,8 +373,9 @@
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
     .filialen {
+        padding:0 15px 20px;
         flex-direction: column;
         gap: 0;
       }
@@ -381,8 +384,9 @@
         letter-spacing: .2em;   
     }
      
+    .filiale {
+        width: 100%;
+    }
 };
    
-
-
 
