--- a/src/styles/anmelden.css
+++ b/src/styles/anmelden.css
@@ -40,6 +40,26 @@
     padding: 10px;
 }
 
+.leistung-link{
+    color: white;
+    background-color: rgba(255, 0, 0, 0.753);
+    transition: 1s ease;
+    height: 50px;
+    width: 250px;
+    border-radius: 30px;
+    font-size: 1.3em;
+    padding-top: 15px;
+    margin: 40px 0 10px;
+    font-size: large;
+
+}
+
+.leistung-link:hover{
+    box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
+    -webkit-box-shadow:0px 0px 20px 0px rgba(235,245,242,0.9);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(235,245,242,0.9);
+}
+
 @media screen and (max-width: 1280px) {
     .anmelden-form form {
         width: 80vw;
