change menu animation

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -71,25 +71,42 @@ header {
         display: none; 
       }
 
-      .menu {
+       .menu {
+        animation: turn 2s ease-in 1;
+
+       }
+       
+       .menuDiv{
         position: absolute;
+        width: 50px;
+        height: 50px;
+        display: inline;
+        top: 30px;
+        right: 50px;
+        animation: turn 5s ease-in-out infinite;
+    
+       }
+
+      .menu {
         width: 50px;
         display: inline;
         top: 30px;
         right: 50px;
-        padding-bottom: 100px;
+       
       }
     
-      .menu:hover{
-        -webkit-transform: rotateY(-360deg);
-        -ms-transform: rotateY(-360deg);
-        transform: rotateY(-360deg);
-        transition: 3s ease; 
+      .menuDiv:hover{
+        animation: none;
+  
       }
 
       @keyframes turn {
-        0% {transform: rotate(0deg);}
-        100% {transform: rotate(180deg);}
+        0% {transform: rotate(0deg)}
+        25% {transform: rotate(90deg)}
+        50% {transform: rotate(0deg)}
+        75% {transform: rotate(-90deg)};
+        100% {transform: rotate(0deg)};
+        
       }
       .menuNav {
         background: rgba(255, 255, 255, 0.952);
