--- a/src/styles/über.css
+++ b/src/styles/über.css
@@ -178,12 +178,22 @@
     max-width:100px;
     width: 100%;
     height: auto;
+    animation: rotate 5s ease-in-out 1 both;   
+    margin-right: 10px;
+    
 }
 .navi:hover{
-        -webkit-transform: rotateY(-180deg);
-        -ms-transform: rotateY(-180deg);
-        transform: rotateY(-180deg);
-        transition: 2s ease;    
+    animation: none;
+    transform: translate(2px);
+}
+
+@keyframes rotate{
+    0% {
+        transform: rotateY(0deg);
+    }
+    100% {
+        transform: rotateY(-360deg);
+    }
 }
 
 .über--mittle--left {
