--- a/src/styles/informationen.css
+++ b/src/styles/informationen.css
@@ -22,6 +22,7 @@
     width: 400px;
     border: 3px ridge rgba(255, 255, 255, 0.582);
     border-radius: 5px;
+    transition: 1s ease;
 }
 
 .info--imgs legend{
@@ -30,6 +31,11 @@
     padding:20px;
  
 }
+
+.info--imgs fieldset:hover{
+    transform: translate(7px);
+}
+
 
 @media screen and (max-width: 860px) {
      
